# mikuenginev1

./: .gitignore  Cargo.toml  README.md  bugs_found.md  commands.txt  stockfish_techniques.md
.cargo/: config.toml
src/: attacks.rs  bitboard.rs  board.rs  eval.rs  history.rs  main.rs  movegen.rs  movepick.rs  perft.rs  search.rs  smp.rs  time.rs  transposition.rs  types.rs  uci.rs  zobrist.rs
src/nnue/: accumulator.rs  feature.rs  incremental.rs  inference.rs  loader.rs  mod.rs  simd.rs
