[package]
name = "mikuengine"
version = "0.1.0"
edition = "2021"
authors = ["komekokomi"]
description = "A high-performance chess engine implemented in pure Rust."


[dependencies]
polyglot-book-rs = "0.1.0"
pyrrhic-rs = "0.2.0"
# No external dependencies to keep it standard-library only.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
